# AdelieAI

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
core/: README.md  logging.py
core/agent/: __init__.py  agentic_runner.py  graph.py  nodes.py  presets.py  rag.py  runner.py  state.py
core/api/: __init__.py  agents.py  app.py  demos_router.py  docs.py  docs_web.py  eval.py  eval_web.py  middleware.py  persona_import_web.py  personas_web.py  (+2 more)
docs/: ARCHITECTURE.md  CAPABILITY_TIERS.md  GLOSSARY.md  MILESTONES.md  PERSONA_PACK.md  TRAINING.md  USAGE.md  persona_design_guide.md
models/: REGISTRY.md
personas/: README.md
scripts/: capture_screenshots.py  capture_step6_screenshots.py  compare_adapters.py  eval_iterate.py  eval_persona.py  export_dpo.py  publish_hf.py  recapture_clean.py  train_lora_roleplay.py  train_nano_gpt.py
tests/: conftest.py  test_agentic.py  test_api.py  test_bm25_hybrid.py  test_chunker.py  test_compare.py  test_demos_router.py  test_docs_api.py  test_eval.py  test_eval_iteration.py  test_evidence_search.py  test_export_dpo.py  test_gguf_client.py  test_graph_retriever_rdflib.py  test_graph_retriever_stub.py  test_grounding.py  test_logging.py  test_model_resolver.py  test_nano_gpt.py  test_persona_dataset.py  test_persona_eval.py  test_persona_packs.py  test_personas_web.py  test_presets.py  test_retrieval_ingest.py  test_runner.py  test_runner_rag.py  test_scripted_client.py  test_session.py  test_store_sql.py  test_streaming.py  test_stub_client.py  test_stub_voice.py  test_tools.py  test_training.py  test_web.py
(+166 files in other folders)
