[project]
name = "adelie-ai"
version = "0.1.0"
description = "Self-hosted Agentic RAG engine — own your weights, own your tokens"
authors = [{name = "AdelieAI contributors"}]
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "pydantic>=2.9",
    "uvicorn[standard]>=0.30",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "transformers>=4.46",
    "accelerate>=1.0",
    "huggingface-hub>=0.26",
    "torch>=2.4",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "sentence-transformers>=3.0",
    "chromadb>=0.5",
    "rank-bm25>=0.2",
    "langgraph>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "playwright>=1.40",
    "pytest-playwright>=0.5",
]
train = [
    "peft>=0.12",
    "trl>=0.11",
    "datasets>=2.20",
    "bitsandbytes>=0.43",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-p no:playwright"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["core*"]
